--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
 
-    --Moderatecyan: hsl(176, 50%, 47%);
-    --Darkcyan: hsl(176, 72%, 28%);
+  --Moderatecyan: hsl(176, 50%, 47%);
+  --Darkcyan: hsl(176, 72%, 28%);
 
-    --Black: hsl(0, 0%, 0%);
-    --Darkgray: hsl(0, 0%, 48%);
+  --Black: hsl(0, 0%, 0%);
+  --Darkgray: hsl(0, 0%, 48%);
 
-     font-family: 'Commissioner', sans-serif;
-
+  font-family: "Commissioner", sans-serif;
 }
 
 ul {
-    list-style: none;
-    display: flex;
-    gap:2rem;
-    font-size: 1.6rem;
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  font-size: 1.6rem;
 }
 
 li a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 body {
-    background-color: rgb(242, 242, 242);
+  background-color: rgb(242, 242, 242);
 }
 
 .container {
@@ -61,7 +60,7 @@ h1 {
 }
 
 h2 {
-   font-size: 2.2rem;
+  font-size: 2.2rem;
 }
 
 p {
@@ -70,49 +69,48 @@ p {
 }
 
 button {
-   background-color: var(--Darkcyan);
-   color: white;
-   padding: 1.5rem 3rem;
-   border: none;
-   border-radius: 30px;
+  background-color: var(--Darkcyan);
+  color: white;
+  padding: 1.5rem 3rem;
+  border: none;
+  border-radius: 30px;
 }
 
 .numbers {
-    font-size: 3.5rem;
-    font-weight: 700;
+  font-size: 3.5rem;
+  font-weight: 700;
 }
 
 header {
-    background-image: url(images/image-hero-desktop.jpg);
-    height: 50vh;
-   color: white;
+  background-image: url(images/image-hero-desktop.jpg);
+  height: 50vh;
+  color: white;
 }
 
 header .flex {
-    padding-top: 4rem;
-    margin: 0 10rem;
-    justify-content: space-between;
+  padding-top: 4rem;
+  margin: 0 10rem;
+  justify-content: space-between;
 }
 
 header .menu {
-    display: none;
+  display: none;
 }
 
 /* first section */
 
 .one {
-    text-align: center;
-    padding: 4rem 6rem;
-    line-height: 4rem;
-    background-color: white;
+  text-align: center;
+  padding: 4rem 6rem;
+  line-height: 4rem;
+  background-color: white;
 }
 .one .flex {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .one button {
-    margin-top: 2rem;
-   
+  margin-top: 2rem;
 }
 
 .one button:nth-child(2) {
@@ -120,122 +118,184 @@ header .menu {
   font-weight: 700;
   color: var(--Darkgray);
 
- padding: 0;
- padding-right: 10rem;
- position: relative;
+  padding: 0;
+  padding-right: 10rem;
+  position: relative;
 }
 
 .bookmark {
-    height: auto;
-    padding: -2rem;
+  height: auto;
+  padding: -2rem;
 }
 
 label {
-    position: absolute;
-    left: 45%;
-    top: 35%;
+  position: absolute;
+  left: 45%;
+  top: 35%;
 }
 
 /* section two */
 
 .two {
-    margin-top: 3rem;
-    padding-bottom: 5rem;
-    background-color: white;
+  margin-top: 3rem;
+  padding-bottom: 5rem;
+  background-color: white;
 }
 
 .numbers {
-    font-size: 3.5rem;
-    font-weight: 700;
+  font-size: 3.5rem;
+  font-weight: 700;
 }
 
 .line {
-    
-    height: 6rem;
-    background-color: var(--Darkgray);
-    width: 1px;
-    
+  height: 6rem;
+  background-color: var(--Darkgray);
+  width: 1px;
 }
 
 .two .flex {
-    padding: 5rem 20rem 5rem 5rem;
-    justify-content: space-between;
+  padding: 5rem 20rem 5rem 5rem;
+  justify-content: space-between;
 }
 
 .loading {
-    width: 86%;
-    height: 1.5rem;
-    background-color: lightgray;
-    border-radius: 10px;
-    margin: 0 auto;
+  width: 86%;
+  height: 1.5rem;
+  background-color: lightgray;
+  border-radius: 10px;
+  margin: 0 auto;
 }
 .load {
-    width: 80%;
-    height: 1.5rem;
-    background-color: var(--Darkcyan);
-    border-radius: 10px;
+  width: 80%;
+  height: 1.5rem;
+  background-color: var(--Darkcyan);
+  border-radius: 10px;
 }
 
-
 /* three */
-.three{
-   margin-top: 3rem;
-   padding: 5rem;
-   line-height: 3rem;
-   background-color: white;
+.three {
+  margin-top: 3rem;
+  padding: 5rem;
+  line-height: 3rem;
+  background-color: white;
 }
 
 .space {
-    padding: 2.2rem 0;
+  padding: 2.2rem 0;
 }
 
-.box{
-    border: 1px solid var(--Darkgray);
-    border-radius: 5px;
-    padding: 4rem;
-    margin-top: 3rem;
+.box {
+  border: 1px solid var(--Darkgray);
+  border-radius: 5px;
+  padding: 4rem;
+  margin-top: 3rem;
 }
 
-.box .flex{
-    justify-content: space-between;
+.box .flex {
+  justify-content: space-between;
 }
 
 .flex2 {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.box p{
-    padding: 1rem 0;
+.box p {
+  padding: 1rem 0;
 }
 
 .green {
-    color: var(--Darkcyan);
-    font-weight: 500;
+  color: var(--Darkcyan);
+  font-weight: 500;
 }
 
 .last {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .last button {
-    background-color: grey;
+  background-color: grey;
 }
 
 @media (max-width: 500px) {
-    header .menu {
-        display: block;
-        font-size: 3rem;
-    }
+  header .menu {
+    display: block;
+    font-size: 3rem;
+  }
 
-    header .flex{
-        margin: 0;
-        padding: 3rem;
-    }
+  header .flex {
+    margin: 0;
+    padding: 3rem;
+  }
 
-    ul {
-        display: none;
-    }
+  ul {
+    display: none;
+  }
+
+  header .menu {
+    display: block;
+    font-size: 3rem;
+  }
+
+  header .flex {
+    margin: 0;
+    padding: 3rem;
+  }
+
+  ul {
+    display: none;
+  }
+
+  .container {
+    width: 86%;
+  }
+
+  .one {
+    line-height: 2.8rem;
+  }
+
+  .one h1 {
+    padding-bottom: 1.5rem;
+  }
+
+  .one label {
+    display: none;
+  }
+
+  .one button:nth-child(2) {
+    padding: 0;
+  }
+
+  .one button:nth-child(1) {
+    font-weight: 700;
+    font-size: 1.9rem;
+    padding: 2rem 3.4rem;
+  }
+
+  .one .bookmark {
+    height: 60px;
+  }
+
+  .two .flex {
+    flex-direction: column;
+    text-align: center;
+    line-height: 2.8rem;
+    margin-left: 60%;
+    padding-right: 10rem;
+  }
+
+  .two .center {
+    margin-left: 16%;
+  }
+
+  .two .line {
+    height: 1px;
+    width: 90px;
+    margin: 2rem 4.6rem;
+  }
+
+  .box .flex{
+    flex-direction: column;
+  }
 }
-
